# bab

./: .ecrc  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .solhint.json  Makefile  README.md  package-lock.json  package.json  pinstall.sh  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug.md  feature-request.md
.github/workflows/: workflow.yml
_tasks/: README.md
_tasks/hw5-Security and Tokens/: ERC20.sol
misc/: create_your_crypto_token.sol  sample.sol
notebooks/.ipynb_checkpoints/: FL5_Game_Theory_and_Attacks-checkpoint.ipynb
ps_max/hw1-Build a Blockchain in Python/: hw1.ipynb
ps_max/hw2-Deploy Your First Contract/: OmkarBank.sol
ps_max/hw3-What Would Solidity Print/: README.md
ps_max/hw4 - Interact with Ethereum Through Web3/: web3.js
ps_max/hw5-Security and Tokens/: ERC20.sol
ps_max/misc/: Untitled.ipynb
ps_roman/hw1-Build a Blockchain in Python/: hw1_solutions.ipynb
ps_zak/hw1-Build a Blockchain in Python/: hw1.ipynb
requirements/: requirements.dev.in  requirements.dev.txt  requirements.in  requirements.lint.in  requirements.lint.txt  requirements.test.in  requirements.test.txt  requirements.txt
utils/github_bab/: bab_types.py  client.py  constants.py  example.env  main.py
