[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bab"
version = "0.1.0"
description = "Blockchain at Berkeley Course Repository"
authors = ["neuromaxer <neuromaxed@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/neuromaxer/bab"
repository = "https://github.com/neuromaxer/bab"
keywords = ["blockchain", "bab"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
notebook = "^6.4.6"
pandas = "^1.3.4"
numpy = "^1.21.4"
ipyparallel = "^8.0.0"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
